--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>avrojo</title>
     <link rel="icon" href="./public/avrojo.svg">
+    <link rel="style" href="./styles/index.css">
 </head>
 <body>
+    <div class="menu">
+  <div class="avrojo">avrojo</div>
+  <div class="frame-1">
+    <div class="qui-n-soy">Quién soy</div>
+    <div class="proyectos">Proyectos</div>
+    <div class="contacto">Contacto</div>
+    <div class="frame-1">
+      <img class="github" src="github.svg" />
+      <img class="linkedin" src="linkedin.svg" />
+    </div>
+  </div>
+</div>
+
     
 </body>
 
