probando plugin figma

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,138 @@
     <link rel="icon" href="./public/avrojo.svg">
     <link rel="style" href="./styles/index.css">
 </head>
+
 <body>
-    <div class="menu">
-  <div class="avrojo">avrojo</div>
-  <div class="frame-1">
-    <div class="qui-n-soy">Quién soy</div>
-    <div class="proyectos">Proyectos</div>
-    <div class="contacto">Contacto</div>
-    <div class="frame-1">
-      <img class="github" src="github.svg" />
-      <img class="linkedin" src="linkedin.svg" />
+    <div class="desktop-1">
+        <div class="menu">
+            <div class="avrojo">avrojo</div>
+            <div class="frame-1">
+                <div class="qui-n-soy">Quién soy</div>
+                <div class="proyectos">Proyectos</div>
+                <div class="contacto">Contacto</div>
+                <div class="frame-1">
+                    <img class="github" src="./public/github.svg" />
+                    <img class="linkedin" src="./public/linkedin0.svg" />
+                </div>
+            </div>
+        </div>
+        <div class="presentaci-n">
+            <div class="nombre">
+                <div class="hola">Hola! Soy</div>
+                <div class="alicia-valera">Alicia Valera</div>
+            </div>
+            <div class="desarrolladora-web-basada-en-madrid">
+                Desarrolladora web basada en Madrid.
+            </div>
+        </div>
+        <div class="sobre-m">
+            <div class="descripci-n">
+                <div class="qui-n-soy-yo">¿Quién soy yo?</div>
+                <div
+                    class="me-dedico-especialmente-al-desarrollo-frontend-y-mis-principales-objetivos-al-programar-son-crear-un-c-digo-limpio-y-eficiente-y-que-la-experiencia-del-usuario-sea-placentera-me-gradu-en-2025-en-el-grado-de-desarrollo-de-aplicaciones-web-en-el-ies-villaverde-y-ahora-estoy-trabajando-en-proyectos-personales">
+                    Me dedico especialmente al desarrollo frontend y mis principales
+                    objetivos al programar son crear un código limpio y eficiente y que la
+                    experiencia del usuario sea placentera. Me gradué en 2025 en el grado de
+                    desarrollo de aplicaciones web en el IES Villaverde y ahora estoy
+                    trabajando en proyectos personales.
+                </div>
+            </div>
+            <div class="lista">
+                <div class="lenguajes-habilidades-y-tecnolog-as">
+                    Lenguajes, habilidades y tecnologías
+                </div>
+                <div class="cosas">
+                    <div class="java-jdk-18-javascript-typescript-html-css-php-sql-mongo-db">
+                        Java (JDK 18)
+                        <br />
+                        Javascript/Typescript
+                        <br />
+                        HTML
+                        <br />
+                        CSS
+                        <br />
+                        PHP
+                        <br />
+                        SQL
+                        <br />
+                        MongoDB
+                    </div>
+                    <div class="vs-code-eclipse-wordpress-elementor-chrome-dev-tools-my-sql-git-git-hub">
+                        VSCode
+                        <br />
+                        Eclipse
+                        <br />
+                        Wordpress
+                        <br />
+                        Elementor
+                        <br />
+                        Chrome DevTools
+                        <br />
+                        MySQL
+                        <br />
+                        Git &amp; GitHub
+                    </div>
+                    <div class="react-laravel-astro-node-js-figma-bash-docker">
+                        React
+                        <br />
+                        Laravel
+                        <br />
+                        Astro
+                        <br />
+                        Node.js
+                        <br />
+                        Figma
+                        <br />
+                        Bash
+                        <br />
+                        Docker
+                    </div>
+                </div>
+            </div>
+            <div class="frame-12">
+                <div class="ver-cv-completo">VER CV COMPLETO</div>
+                <img class="external-link" src="./public/link.svg" />
+            </div>
+        </div>
+        <div class="proyectos2">
+            <div class="descripci-n">
+                <div class="proyectos-destacados">Proyectos destacados</div>
+            </div>
+        </div>
+        <div class="contacto2">
+            <div class="t-tulo">
+                <div class="contacto3">Contacto</div>
+                <div
+                    class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible">
+                    <span>
+                        <span
+                            class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible-span">
+                            Además de por Linkedin podéis rellenar el siguiente formulario de
+                            contacto o enviar un email a
+                        </span>
+                        <span
+                            class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible-span2">
+                            valerarojoalicia@gmail
+                        </span>
+                        <span
+                            class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible-span">
+                            .com e intentaré responder lo antes posible
+                        </span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="frame-13">
+                <div class="p-gina-dise-ada-utilizando-figma-para-luego-ser-desarrollada-en-por-alicia-valera">
+                    Página diseñada utilizando Figma, para luego ser desarrollada en [...]
+                    por Alicia Valera
+                </div>
+                <div class="ver-c-digo-en-git-hub">Ver código en GitHub</div>
+            </div>
+            <div class="volver-arriba">Volver arriba</div>
+        </div>
     </div>
-  </div>
-</div>
 
-    
+
 </body>
-
