--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>avrojo</title>
     <link rel="icon" href="./public/avrojo.svg">
-    <link rel="style" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 <div class="contacto">Contacto</div>
                 <div class="frame-1">
                     <img class="github" src="./public/github.svg" />
-                    <img class="linkedin" src="./public/linkedin0.svg" />
+                    <img class="linkedin" src="./public/linkedin.svg" />
                 </div>
             </div>
         </div>
