--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <main>
+    <div id="move"></div>
     <div class="menu">
       <div class="avrojo">avrojo</div>
       <div class="frame-1">
@@ -158,7 +159,7 @@
     </div>
     <main>
       <script src="./utils/form.js"></script>
-            <!-- <script src="./utils/gradient.js"></script> -->
+            <script src="./utils/gradient.js"></script>
 </body>
 
 </html>
