--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
   <link rel="icon" href="./public/icons/avrojo.svg" />
   <link rel="stylesheet" href="./styles/index.css" />
   <link rel="stylesheet" href="./styles/vars.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
   <main>
     <div id="move"></div>
     <div class="menu">
-      <div class="avrojo">avrojo</div>
-      <div class="frame-1">
-        <div class="qui-n-soy">Quién soy</div>
-        <div class="proyectos">Proyectos</div>
-        <div class="contacto">Contacto</div>
-        <div class="frame-1">
-          <img class="github" src="./public/icons/github.svg" />
-          <img class="linkedin" src="./public/icons/linkedin.svg" />
-        </div>
+      <a href="#" class="avrojo">avrojo</a>
+      <div class="menu-items">
+        <a href="#sobre-mi" class="menu-link">Quién soy</a>
+        <a href="#proyectos" class="menu-link">Proyectos</a>
+        <a href="#contacto" class="menu-link">Contacto</a>
+          <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" />
+          <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon" src="./public/icons/linkedin.svg" /></a>
       </div>
     </div>
     <div class="presentacion">
@@ -37,7 +34,7 @@
         Desarrolladora web basada en Madrid.
       </div>
     </div>
-    <div class="sobre-m">
+    <div id="sobre-mi">
       <div class="descripci-n">
         <div class="qui-n-soy-yo">¿Quién soy yo?</div>
         <div
@@ -104,15 +101,15 @@
       <div class="frame-12">
         
       
-      <a class="ver-cv-completo" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img class="external-link" src="./public/icons/link.svg" /></a>
+      <a class="ver-cv-completo" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img class="icon" src="./public/icons/link.svg" /></a>
     </div>
     </div>
-    <div class="proyectos2">
+    <div id="proyectos">
       <div class="descripci-n">
         <div class="proyectos-destacados">Proyectos destacados</div>
       </div>
     </div>
-    <div class="contacto2">
+    <div id="contacto">
       <div class="t-tulo">
         <div class="contacto3">Contacto</div>
         <div
