hero (mostly) done

--- a/index.html
+++ b/index.html
@@ -21,22 +21,20 @@
         <a href="#sobre-mi" class="menu-link">Quién soy</a>
         <a href="#proyectos" class="menu-link">Proyectos</a>
         <a href="#contacto" class="menu-link">Contacto</a>
-          <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" />
-          <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon" src="./public/icons/linkedin.svg" /></a>
+        <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" />
+        <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon" src="./public/icons/linkedin.svg" /></a>
       </div>
     </div>
     <div class="presentacion">
-      <div class="nombre">
-        <div class="hola">Hola! Soy</div>
+        <div class="title">Hola! Soy</div>
         <div class="alicia-valera">Alicia Valera</div>
-      </div>
-      <div class="desarrolladora-web-basada-en-madrid">
+      <div class="accent">
         Desarrolladora web basada en Madrid.
       </div>
     </div>
     <div id="sobre-mi">
       <div class="descripci-n">
-        <div class="qui-n-soy-yo">¿Quién soy yo?</div>
+        <div class="title">¿Quién soy yo?</div>
         <div
           class="me-dedico-especialmente-al-desarrollo-frontend-y-mis-principales-objetivos-al-programar-son-crear-un-c-digo-limpio-y-eficiente-y-que-la-experiencia-del-usuario-sea-placentera-me-gradu-en-2025-en-el-grado-de-desarrollo-de-aplicaciones-web-en-el-ies-villaverde-y-ahora-estoy-trabajando-en-proyectos-personales">
           Me dedico especialmente al desarrollo frontend y mis principales
@@ -47,7 +45,7 @@
         </div>
       </div>
       <div class="lista">
-        <div class="lenguajes-habilidades-y-tecnolog-as">
+        <div class="accent">
           Lenguajes, habilidades y tecnologías
         </div>
         <div class="cosas">
@@ -99,19 +97,20 @@
         </div>
       </div>
       <div class="frame-12">
-        
-      
-      <a class="ver-cv-completo" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img class="icon" src="./public/icons/link.svg" /></a>
-    </div>
+
+
+        <a class="ver-cv-completo" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO
+          <img class="icon" src="./public/icons/link.svg" /></a>
+      </div>
     </div>
     <div id="proyectos">
       <div class="descripci-n">
-        <div class="proyectos-destacados">Proyectos destacados</div>
+        <div class="title">Proyectos destacados</div>
       </div>
     </div>
     <div id="contacto">
       <div class="t-tulo">
-        <div class="contacto3">Contacto</div>
+        <div class="title">Contacto</div>
         <div
           class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible">
           <span>
@@ -132,7 +131,7 @@
           <form method="POST" id="form">
             <!-- public key -->
             <input type="hidden" name="access_key" value="c2f95734-b2b4-4c07-b74d-6bdb4a97c489">
-            <label for="name">Nombre</label><input type="text" name="name" id="name"required autocomplete="name">
+            <label for="name">Nombre</label><input type="text" name="name" id="name" required autocomplete="name">
             <label for="email">Email</label><input type="email" name="email" id="email" required autocomplete="email">
             <label for="message">Mensaje</label><textarea name="message" id="message" required></textarea>
             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
@@ -156,7 +155,7 @@
     </div>
     <main>
       <script src="./utils/form.js"></script>
-            <script src="./utils/gradient.js"></script>
+      <script src="./utils/gradient.js"></script>
 </body>
 
 </html>
