--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
         <a href="#proyectos" class="menu-link">Proyectos</a>
         <a href="#contacto" class="menu-link">Contacto</a>
         <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" />
-        <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon" src="./public/icons/linkedin.svg" /></a>
+          <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon"
+              src="./public/icons/linkedin.svg" /></a>
       </div>
     </div>
     <div class="presentacion">
-        <div class="title">Hola! Soy</div>
-        <div class="alicia-valera">Alicia Valera</div>
+      <div class="title">Hola! Soy</div>
+      <div class="alicia-valera">Alicia Valera</div>
       <div class="accent">
         Desarrolladora web basada en Madrid.
       </div>
+      <!-- ANADIR EL BOTÓN PARA AUTO SCROLLEAR -->
     </div>
     <div id="sobre-mi">
-      <div class="descripci-n">
+      <div class="descripcion">
         <div class="title">¿Quién soy yo?</div>
-        <div
-          class="me-dedico-especialmente-al-desarrollo-frontend-y-mis-principales-objetivos-al-programar-son-crear-un-c-digo-limpio-y-eficiente-y-que-la-experiencia-del-usuario-sea-placentera-me-gradu-en-2025-en-el-grado-de-desarrollo-de-aplicaciones-web-en-el-ies-villaverde-y-ahora-estoy-trabajando-en-proyectos-personales">
+        <div>
           Me dedico especialmente al desarrollo frontend y mis principales
           objetivos al programar son crear un código limpio y eficiente y que
           la experiencia del usuario sea placentera. Me gradué en 2025 en el
@@ -48,75 +49,41 @@
         <div class="accent">
           Lenguajes, habilidades y tecnologías
         </div>
-        <div class="cosas">
-          <div class="java-jdk-18-javascript-typescript-html-css-php-sql-mongo-db">
-            Java (JDK 18)
-            <br />
-            Javascript/Typescript
-            <br />
-            HTML
-            <br />
-            CSS
-            <br />
-            PHP
-            <br />
-            SQL
-            <br />
-            MongoDB
-          </div>
-          <div class="vs-code-eclipse-wordpress-elementor-chrome-dev-tools-my-sql-git-git-hub">
-            VSCode
-            <br />
-            Eclipse
-            <br />
-            Wordpress
-            <br />
-            Elementor
-            <br />
-            Chrome DevTools
-            <br />
-            MySQL
-            <br />
-            Git &amp; GitHub
-          </div>
-          <div class="react-laravel-astro-node-js-figma-bash-docker">
-            React
-            <br />
-            Laravel
-            <br />
-            Astro
-            <br />
-            Node.js
-            <br />
-            Figma
-            <br />
-            Bash
-            <br />
-            Docker
-          </div>
-        </div>
-      </div>
-      <div class="frame-12">
-
-
-        <a class="ver-cv-completo" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO
-          <img class="icon" src="./public/icons/link.svg" /></a>
+        <ul class="cosas">
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>JavaScript (ES6+)</li>
+          <li>TypeScript</li>
+          <li>React</li>
+          <li>PHP</li>
+          <li>Java (JDK18)</li>
+          <li>Git y GitHub</li>
+          <li>Figma</li>
+          <li>SQL</li>
+          <li>Eclipse</li>
+          <li>Wordpress</li>
+          <li>Elementor</li>
+          <li>Laravel</li>
+          <li>Astro</li>
+          <li>Node.js</li>
+          <li>Docker</li>
+          <li>Inglés C1</li>
+          <li>Francés B2</li>
+        </ul>
+        <a class="cv" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img class="icon" src="./public/icons/link.svg" /></a>
       </div>
     </div>
     <div id="proyectos">
-      <div class="descripci-n">
-        <div class="title">Proyectos destacados</div>
-      </div>
+      <p class="title">Proyectos destacados</p>
     </div>
     <div id="contacto">
-      <div class="t-tulo">
         <div class="title">Contacto</div>
         <div
           class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible">
           <span>
             <span
               class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible-span">
-              Además de por Linkedin podéis rellenar el siguiente formulario
+              Además de poder contactarme por Linkedin podéis rellenar el siguiente formulario
               de contacto o enviar un email a
             </span>
             <span
@@ -141,7 +108,6 @@
 
           </form>
         </div>
-      </div>
     </div>
     <div class="footer">
       <div class="frame-13">
