--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <a href="#sobre-mi" class="menu-link">Quién soy</a>
         <a href="#proyectos" class="menu-link">Proyectos</a>
         <a href="#contacto" class="menu-link">Contacto</a>
-        <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" />
-          <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon"
-              src="./public/icons/linkedin.svg" /></a>
+        <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon" src="./public/icons/linkedin.svg" /></a>
+
+        <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" /></a>
       </div>
     </div>
     <div class="presentacion">
@@ -47,28 +47,28 @@
       </div>
       <div class="lista">
         <div class="accent">
-          Lenguajes, habilidades y tecnologías
+          Lenguajes, tecnologías y aptitudes
         </div>
         <ul class="cosas">
-          <li>HTML5</li>
-          <li>CSS3</li>
-          <li>JavaScript (ES6+)</li>
-          <li>TypeScript</li>
-          <li>React</li>
-          <li>PHP</li>
-          <li>Java (JDK18)</li>
-          <li>Git y GitHub</li>
-          <li>Figma</li>
-          <li>SQL</li>
-          <li>Eclipse</li>
-          <li>Wordpress</li>
-          <li>Elementor</li>
-          <li>Laravel</li>
-          <li>Astro</li>
-          <li>Node.js</li>
-          <li>Docker</li>
-          <li>Inglés C1</li>
-          <li>Francés B2</li>
+          <li class="lenguaje">HTML5</li>
+          <li class="lenguaje">CSS3</li>
+          <li class="lenguaje">JavaScript (ES6+)</li>
+          <li class="lenguaje">PHP</li>
+          <li class="lenguaje">Java (JDK18)</li>         
+          <li class="lenguaje">TypeScript</li>          
+          <li class="tecnologias">React</li>
+          <li class="tecnologias">Laravel</li>
+          <li class="tecnologias">Astro</li>
+          <li class="tecnologias">Figma</li>
+          <li class="tecnologias">Git y GitHub</li>
+          <li class="tecnologias">SQL</li>
+          <li class="tecnologias">Eclipse</li>
+          <li class="tecnologias">Wordpress</li>
+          <li class="tecnologias">Elementor</li>
+          <li class="tecnologias">Node.js</li>
+          <li class="tecnologias">Docker</li>
+          <li class="aptitud">Inglés C1</li>
+          <li class="aptitud">Francés B2</li>
         </ul>
         <a class="cv" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img class="icon" src="./public/icons/link.svg" /></a>
       </div>
@@ -109,6 +109,7 @@
           </form>
         </div>
     </div>
+  </main>
     <div class="footer">
       <div class="frame-13">
         <div class="p-gina-dise-ada-utilizando-figma-para-luego-ser-desarrollada-en-por-alicia-valera">
@@ -119,7 +120,7 @@
       </div>
       <div class="volver-arriba">Volver arriba</div>
     </div>
-    <main>
+  
       <script src="./utils/form.js"></script>
       <script src="./utils/gradient.js"></script>
 </body>
