--- a/index.html
+++ b/index.html
@@ -74,40 +74,27 @@
       </div>
     </div>
     <div id="proyectos">
-      <p class="title">Proyectos destacados</p>
+      <p class="title">Proyectos recientes</p>
     </div>
     <div id="contacto">
         <div class="title">Contacto</div>
-        <div
-          class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible">
-          <span>
-            <span
-              class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible-span">
+            <div>
               Además de poder contactarme por Linkedin podéis rellenar el siguiente formulario
-              de contacto o enviar un email a
-            </span>
-            <span
-              class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible-span2">
-              valerarojoalicia@gmail.com
-            </span>
-            <span
-              class="adem-s-de-por-linkedin-pod-is-rellenar-el-siguiente-formulario-de-contacto-o-enviar-un-email-a-valerarojoalicia-gmail-com-e-intentar-responder-lo-antes-posible-span">
+              de contacto o enviar un email a <span class = "correo">valerarojoalicia@gmail.com </span>
               e intentaré responder lo antes posible
-            </span>
-          </span>
+            </div>
           <form method="POST" id="form">
             <!-- public key -->
             <input type="hidden" name="access_key" value="c2f95734-b2b4-4c07-b74d-6bdb4a97c489">
-            <label for="name">Nombre</label><input type="text" name="name" id="name" required autocomplete="name">
-            <label for="email">Email</label><input type="email" name="email" id="email" required autocomplete="email">
-            <label for="message">Mensaje</label><textarea name="message" id="message" required></textarea>
+            <div class="form-input"><label for="name">Nombre</label><input type="text" name="name" id="name" class="leches" required autocomplete="name"></div>
+            <div class="form-input"><label for="email">Email</label><input type="email" name="email" id="email" class="leches" required autocomplete="email"></div>
+            <div class="form-input"><label for="message">Mensaje</label><textarea name="message" id="message" class="leches" required></textarea></div>
             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-            <button type="submit">Submit Form</button>
-
+            <button type="submit">ENVIAR</button>
+            
             <div id="result"></div>
 
           </form>
-        </div>
     </div>
   </main>
     <div class="footer">
