--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
   <main>
     <div id="move"></div>
     <div class="menu">
-      <a href="#" class="avrojo">avrojo</a>
+      <a href="" class="avrojo">avrojo</a>
       <div class="menu-items">
         <a href="#sobre-mi" class="menu-link">Quién soy</a>
         <a href="#proyectos" class="menu-link">Proyectos</a>
         <a href="#contacto" class="menu-link">Contacto</a>
-        <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon" src="./public/icons/linkedin.svg" /></a>
+        <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon"
+            src="./public/icons/linkedin.svg" /></a>
 
         <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" /></a>
       </div>
     </div>
     <div class="presentacion">
-      <div class="title">Hola! Soy</div>
+      <div class="title">Hola, soy</div>
       <div class="alicia-valera">Alicia Valera</div>
       <div class="accent">
         Desarrolladora web basada en Madrid.
@@ -54,8 +55,8 @@
           <li class="lenguaje">CSS3</li>
           <li class="lenguaje">JavaScript (ES6+)</li>
           <li class="lenguaje">PHP</li>
-          <li class="lenguaje">Java (JDK18)</li>         
-          <li class="lenguaje">TypeScript</li>          
+          <li class="lenguaje">Java (JDK18)</li>
+          <li class="lenguaje">TypeScript</li>
           <li class="tecnologias">React</li>
           <li class="tecnologias">Laravel</li>
           <li class="tecnologias">Astro</li>
@@ -70,46 +71,47 @@
           <li class="aptitud">Inglés C1</li>
           <li class="aptitud">Francés B2</li>
         </ul>
-        <a class="cv" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img class="icon" src="./public/icons/link.svg" /></a>
+        <a class="cv" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img
+            class="icon" src="./public/icons/link.svg" /></a>
       </div>
     </div>
     <div id="proyectos">
       <p class="title">Proyectos recientes</p>
     </div>
     <div id="contacto">
-        <div class="title">Contacto</div>
-            <div>
-              Además de poder contactarme por Linkedin podéis rellenar el siguiente formulario
-              de contacto o enviar un email a <span class = "correo">valerarojoalicia@gmail.com </span>
-              e intentaré responder lo antes posible
-            </div>
-          <form method="POST" id="form">
-            <!-- public key -->
-            <input type="hidden" name="access_key" value="c2f95734-b2b4-4c07-b74d-6bdb4a97c489">
-            <div class="form-input"><label for="name">Nombre</label><input type="text" name="name" id="name" class="leches" required autocomplete="name"></div>
-            <div class="form-input"><label for="email">Email</label><input type="email" name="email" id="email" class="leches" required autocomplete="email"></div>
-            <div class="form-input"><label for="message">Mensaje</label><textarea name="message" id="message" class="leches" required></textarea></div>
-            <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-            <button type="submit">ENVIAR</button>
-            
-            <div id="result"></div>
+      <div class="title">Contacto</div>
+      <div>
+        Además de poder contactarme por Linkedin podéis rellenar el siguiente formulario
+        de contacto o enviar un email a <span class="correo">valerarojoalicia@gmail.com </span>
+        e intentaré responder lo antes posible
+      </div>
+      <form method="POST" id="form">
+        <!-- public key -->
+        <input type="hidden" name="access_key" value="c2f95734-b2b4-4c07-b74d-6bdb4a97c489">
+        <div class="form-input"><label for="name">Nombre</label><input type="text" name="name" id="name" class="leches"
+            required autocomplete="name"></div>
+        <div class="form-input"><label for="email">Email</label><input type="email" name="email" id="email"
+            class="leches" required autocomplete="email"></div>
+        <div class="form-input"><label for="message">Mensaje</label><textarea name="message" id="message" class="leches"
+            required></textarea></div>
+        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+        <button type="submit">ENVIAR</button>
+        <div id="result"></div>
 
-          </form>
+      </form>
     </div>
   </main>
-    <div class="footer">
-      <div class="frame-13">
-        <div class="p-gina-dise-ada-utilizando-figma-para-luego-ser-desarrollada-en-por-alicia-valera">
-          Página diseñada utilizando Figma, para luego ser desarrollada en
-          [...] por Alicia Valera
-        </div>
-        <div class="ver-c-digo-en-git-hub">Ver código en GitHub</div>
-      </div>
-      <div class="volver-arriba">Volver arriba</div>
+  <div class="footer">
+    <div class="footer-text">
+      Página diseñada utilizando Figma, para luego ser desarrollada en
+      HTML, CSS y JavaScript vanilla por Alicia Valera
     </div>
-  
-      <script src="./utils/form.js"></script>
-      <script src="./utils/gradient.js"></script>
+    <a href="" class="footer-text">Volver arriba</a>
+    <a href="https://github.com/avrojo/avrojo.github.io" target="_blank" class="footer-text">Ver código en GitHub</a>
+  </div>
+
+  <script src="./utils/form.js"></script>
+  <script src="./utils/gradient.js"></script>
 </body>
 
 </html>
