--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li class="tecnologias">Astro</li>
           <li class="tecnologias">Figma</li>
           <li class="tecnologias">Git y GitHub</li>
-          <li class="tecnologias">SQL</li>
+          <li class="tecnologias">MySQL</li>
           <li class="tecnologias">Eclipse</li>
           <li class="tecnologias">Wordpress</li>
           <li class="tecnologias">Elementor</li>
@@ -77,6 +77,25 @@
     </div>
     <div id="proyectos">
       <p class="title">Proyectos recientes</p>
+      <div>
+      <div class="tab">
+        <button class="tablinks" onclick="openCity(event, 'GreenVet')">GreenVet</button>
+        <button class="tablinks" onclick="openCity(event, 'MediaClub')">MediaClub</button>
+        <button class="tablinks" onclick="openCity(event, 'Proximos')">Próximos proyectos</button>
+      </div>
+
+      <div id="GreenVet" class="tabcontent">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quos ipsam iste? Est cupiditate reiciendis maiores dolore culpa aspernatur corrupti, iusto minima, placeat delectus id doloremque voluptate ut rerum tenetur.
+      </div>
+
+      <div id="MediaClub" class="tabcontent">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolor atque cum minima totam, quam, fugit delectus, provident ipsam consequuntur aliquam explicabo accusantium? Nostrum excepturi impedit modi commodi beatae facilis!
+      </div>
+
+      <div id="Proximos" class="tabcontent">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, illum obcaecati placeat praesentium culpa porro cupiditate aperiam libero eos aut delectus voluptates id minima. Voluptatum voluptatibus suscipit soluta dignissimos numquam?
+      </div>
+      </div>
     </div>
     <div id="contacto">
       <div class="title">Contacto</div>
@@ -112,6 +131,7 @@
 
   <script src="./utils/form.js"></script>
   <script src="./utils/gradient.js"></script>
+  <script src="./utils/proyectos.js"></script>
 </body>
 
 </html>
