--- a/index.html
+++ b/index.html
@@ -77,24 +77,36 @@
     </div>
     <div id="proyectos">
       <p class="title">Proyectos recientes</p>
-      <div>
-      <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'GreenVet')">GreenVet</button>
-        <button class="tablinks" onclick="openCity(event, 'MediaClub')">MediaClub</button>
-        <button class="tablinks" onclick="openCity(event, 'Proximos')">Próximos proyectos</button>
-      </div>
+      <div class="pestanas">
+        <div class="tab">
+          <button class="tablinks" onclick="openCity(event, 'GreenVet')" id="defaultOpen">GreenVet</button>
+          <button class="tablinks" onclick="openCity(event, 'Muvis')">Muvis</button>
+          <button class="tablinks" onclick="openCity(event, 'Proximos')">Próximos proyectos</button>
+        </div>
 
-      <div id="GreenVet" class="tabcontent">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quos ipsam iste? Est cupiditate reiciendis maiores dolore culpa aspernatur corrupti, iusto minima, placeat delectus id doloremque voluptate ut rerum tenetur.
-      </div>
+        <div id="GreenVet" class="tabcontent">
+          Durante tres meses trabajé en la universidad MCAST de Malta en uno de sus proyectos Erasmus, en el que acreamos un nuevo
+          diseño de la web utilizando Figma. Posteriormente lo implementamos utilizando
+          Worpress y Elementor e hicimos el seguimiento SEO de la página usando Google Analytics y otros plugins de Wordpress.
+          Con todo esto conseguimos mejorar la experiencia de usuario y la accesibilidad de la página, así como su posicionamiento en Google.
+          <a href="https://www.greenvet4sdg.eu/" target="_blank" class="correo">Ver página del proyecto en la actualidad</a>
+          <img class="img-proyectos" src="./public/greenvet.png" alt="greenvet"/>
+        </div>
 
-      <div id="MediaClub" class="tabcontent">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolor atque cum minima totam, quam, fugit delectus, provident ipsam consequuntur aliquam explicabo accusantium? Nostrum excepturi impedit modi commodi beatae facilis!
-      </div>
+        <div id="Muvis" class="tabcontent">
+          Para mi proyecto final de grado desarrollé junto con mis compañeros una red social para amantes del cine y las series
+          utilizando React en el frontend y Laravel en el backend. Utilizamos la API <a href="https://www.themoviedb.org/">TMDB</a> para obterner toda la información sobre las películas
+          y creamos un sistema de usuarios en el que podían interactuar entre ellos, 
+          añadir películas y series a su lista de favoritos y valorar el contenido. La desplegamos en AWS pero ahora mismo la página no está desplegada en ningún servidor, aunque
+          podéis ver el <a href="https://github.com/avrojo/MediaClub" target="_blank" class="correo">código en GitHub.</a>
+          <img class="img-proyectos" src="./public/muvis.png" alt="muvis"/>
+        </div>
 
-      <div id="Proximos" class="tabcontent">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, illum obcaecati placeat praesentium culpa porro cupiditate aperiam libero eos aut delectus voluptates id minima. Voluptatum voluptatibus suscipit soluta dignissimos numquam?
-      </div>
+        <div id="Proximos" class="tabcontent">
+          Actualmente estoy trabajando en proyectos personales, entre ellos un portfolio artístico utilizando Astro y
+          una página web de recetas de cocina creada con React y una API propia.
+          Próximamente estarán disponibles en esta sección.
+        </div>
       </div>
     </div>
     <div id="contacto">
