--- a/index.html
+++ b/index.html
@@ -85,27 +85,36 @@
         </div>
 
         <div id="GreenVet" class="tabcontent">
-          Durante tres meses trabajé en la universidad MCAST de Malta en uno de sus proyectos Erasmus, en el que acreamos un nuevo
+          Durante tres meses trabajé en la universidad MCAST de Malta en uno de sus proyectos Erasmus, en el que
+          acreamos un nuevo
           diseño de la web utilizando Figma. Posteriormente lo implementamos utilizando
-          Worpress y Elementor e hicimos el seguimiento SEO de la página usando Google Analytics y otros plugins de Wordpress.
-          Con todo esto conseguimos mejorar la experiencia de usuario y la accesibilidad de la página, así como su posicionamiento en Google.
-          <a href="https://www.greenvet4sdg.eu/" target="_blank" class="correo">Ver página del proyecto en la actualidad</a>
-          <img class="img-proyectos" src="./public/greenvet.png" alt="greenvet"/>
+          Worpress y Elementor e hicimos el seguimiento SEO de la página usando Google Analytics y otros plugins de
+          Wordpress.
+          Con todo esto conseguimos mejorar la experiencia de usuario y la accesibilidad de la página, así como su
+          posicionamiento en Google.
+          <a href="https://www.greenvet4sdg.eu/" target="_blank" class="correo">Ver página del proyecto en la
+            actualidad</a>
+          <img class="img-proyectos" src="./public/greenvet.png" alt="greenvet preview" />
         </div>
 
         <div id="Muvis" class="tabcontent">
-          Para mi proyecto final de grado desarrollé junto con mis compañeros una red social para amantes del cine y las series
-          utilizando React en el frontend y Laravel en el backend. Utilizamos la API <a href="https://www.themoviedb.org/">TMDB</a> para obterner toda la información sobre las películas
-          y creamos un sistema de usuarios en el que podían interactuar entre ellos, 
-          añadir películas y series a su lista de favoritos y valorar el contenido. La desplegamos en AWS pero ahora mismo la página no está desplegada en ningún servidor, aunque
-          podéis ver el <a href="https://github.com/avrojo/MediaClub" target="_blank" class="correo">código en GitHub.</a>
-          <img class="img-proyectos" src="./public/muvis.png" alt="muvis"/>
+          Para mi proyecto final de grado desarrollé junto con mis compañeros una red social para amantes del cine y las
+          series
+          utilizando React en el frontend y Laravel en el backend. Utilizamos la API <a
+            href="https://www.themoviedb.org/">TMDB</a> para obterner toda la información sobre las películas
+          y creamos un sistema de usuarios en el que podían interactuar entre ellos,
+          añadir películas y series a su lista de favoritos y valorar el contenido. La desplegamos en AWS pero ahora
+          mismo la página no está desplegada en ningún servidor, aunque
+          podéis ver el <a href="https://github.com/avrojo/MediaClub" target="_blank" class="correo">código en
+            GitHub.</a>
+          <img class="img-proyectos" src="./public/muvis.png" alt="muvis preview" />
         </div>
 
         <div id="Proximos" class="tabcontent">
           Actualmente estoy trabajando en proyectos personales, entre ellos un portfolio artístico utilizando Astro y
           una página web de recetas de cocina creada con React y una API propia.
           Próximamente estarán disponibles en esta sección.
+          <img class="img-proyectos" src="./public/portfolio.png" alt="portfolio preview" />
         </div>
       </div>
     </div>
