--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         Desarrolladora web basada en Madrid.
       </div>
       <!-- ANADIR EL BOTÓN PARA AUTO SCROLLEAR -->
+       <a href="#sobre-mi" class="scroll-down">
+  <span class="scroll-down-text">CONÓCEME</span>
+  <div class="scroll-arrow"></div>
+</a>
     </div>
     <div id="sobre-mi">
       <div class="descripcion">
@@ -153,6 +157,7 @@
   <script src="./utils/form.js"></script>
   <script src="./utils/gradient.js"></script>
   <script src="./utils/proyectos.js"></script>
+  <script src="./utils/scroll.js"></script>
 </body>
 
 </html>
