--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
           añadir películas y series a su lista de favoritos y valorar el contenido. La desplegamos en AWS pero ahora
           mismo la página no está desplegada en ningún servidor, aunque
           podéis ver el <a href="https://github.com/avrojo/MediaClub" target="_blank" class="correo">código en
-            GitHub.</a>
+          GitHub.</a>
           <img class="img-proyectos" src="./public/muvis.png" alt="muvis preview" />
         </div>
 
         <div id="Proximos" class="tabcontent">
           Actualmente estoy trabajando en proyectos personales, entre ellos un portfolio artístico utilizando Astro y
-          una página web de recetas de cocina creada con React y una API propia.
+          en mejorar mi proyecto ya existente de Muvis.
           Próximamente estarán disponibles en esta sección.
           <img class="img-proyectos" src="./public/portfolio.png" alt="portfolio preview" />
         </div>
