--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 
         <div id="GreenVet" class="tabcontent">
           Durante tres meses trabajé en la universidad MCAST de Malta en uno de sus proyectos Erasmus, en el que
-          acreamos un nuevo
-          diseño de la web utilizando Figma. Posteriormente lo implementamos utilizando
+          creamos un nuevo diseño de la web utilizando Figma. Posteriormente lo implementamos utilizando
           Worpress y Elementor e hicimos el seguimiento SEO de la página usando Google Analytics y otros plugins de
           Wordpress.
           Con todo esto conseguimos mejorar la experiencia de usuario y la accesibilidad de la página, así como su
@@ -116,8 +115,7 @@
 
         <div id="Proximos" class="tabcontent">
           Actualmente estoy trabajando en proyectos personales, entre ellos un portfolio artístico utilizando Astro y
-          en mejorar mi proyecto ya existente de Muvis.
-          Próximamente estarán disponibles en esta sección.
+          en mejorar mi proyecto ya existente de Muvis. Los añadiré próximamente
           <img class="img-proyectos" src="./public/portfolio.png" alt="portfolio preview" />
         </div>
       </div>
