--- a/index.html
+++ b/index.html
@@ -1,161 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <title>avrojo</title>
+    <link rel="icon" href="./public/icons/avrojo.svg" />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/vars.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://rsms.me/" />
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-  <title>avrojo</title>
-  <link rel="icon" href="./public/icons/avrojo.svg" />
-  <link rel="stylesheet" href="./styles/index.css" />
-  <link rel="stylesheet" href="./styles/vars.css" />
-</head>
+  <body>
+    <main>
+      <div id="move"></div>
+      <div class="menu">
+        <a href="" class="avrojo">avrojo</a>
+        <div class="menu-items">
+          <a href="#sobre-mi" class="menu-link">Quién soy</a>
+          <a href="#proyectos" class="menu-link">Proyectos</a>
+          <a href="#contacto" class="menu-link">Contacto</a>
+          <a
+            href="https://www.linkedin.com/in/alicia-valera-rojo/"
+            target="_blank"
+            ><img class="icon" src="./public/icons/linkedin.svg"
+          /></a>
 
-<body>
-  <main>
-    <div id="move"></div>
-    <div class="menu">
-      <a href="" class="avrojo">avrojo</a>
-      <div class="menu-items">
-        <a href="#sobre-mi" class="menu-link">Quién soy</a>
-        <a href="#proyectos" class="menu-link">Proyectos</a>
-        <a href="#contacto" class="menu-link">Contacto</a>
-        <a href="https://www.linkedin.com/in/alicia-valera-rojo/" target="_blank"><img class="icon"
-            src="./public/icons/linkedin.svg" /></a>
-
-        <a href="https://github.com/avrojo" target="_blank"><img class="icon" src="./public/icons/github.svg" /></a>
+          <a href="https://github.com/avrojo" target="_blank"
+            ><img class="icon" src="./public/icons/github.svg"
+          /></a>
+        </div>
       </div>
-    </div>
-    <div class="presentacion">
-      <div class="title">Hola, soy</div>
-      <div class="alicia-valera">Alicia Valera</div>
-      <div class="accent">
-        Desarrolladora web basada en Madrid.
+      <div class="presentacion">
+        <div class="title">Hola, soy</div>
+        <div class="alicia-valera">Alicia Valera</div>
+        <div class="accent">Desarrolladora web basada en Madrid.</div>
+        <!-- ANADIR EL BOTÓN PARA AUTO SCROLLEAR -->
+        <a href="#sobre-mi" class="scroll-down">
+          <span class="scroll-down-text">CONÓCEME</span>
+          <div class="scroll-arrow"></div>
+        </a>
       </div>
-      <!-- ANADIR EL BOTÓN PARA AUTO SCROLLEAR -->
-       <a href="#sobre-mi" class="scroll-down">
-  <span class="scroll-down-text">CONÓCEME</span>
-  <div class="scroll-arrow"></div>
-</a>
-    </div>
-    <div id="sobre-mi">
-      <div class="descripcion">
-        <div class="title">¿Quién soy yo?</div>
+      <div id="sobre-mi">
+        <div class="descripcion">
+          <div class="title">¿Quién soy yo?</div>
+          <div>
+            Me dedico especialmente al desarrollo frontend y mis principales
+            objetivos al programar son crear un código limpio y eficiente y que
+            la experiencia del usuario sea placentera. Me gradué en 2025 en el
+            grado de desarrollo de aplicaciones web en el IES Villaverde y ahora
+            estoy trabajando en proyectos personales.
+          </div>
+        </div>
+        <div class="lista">
+          <div class="accent">Lenguajes, tecnologías y aptitudes</div>
+          <ul class="cosas">
+            <li class="lenguaje">HTML5</li>
+            <li class="lenguaje">CSS3</li>
+            <li class="lenguaje">JavaScript (ES6+)</li>
+            <li class="lenguaje">PHP</li>
+            <li class="lenguaje">Java (JDK18)</li>
+            <li class="lenguaje">TypeScript</li>
+            <li class="tecnologias">React</li>
+            <li class="tecnologias">Laravel</li>
+            <li class="tecnologias">Astro</li>
+            <li class="tecnologias">Figma</li>
+            <li class="tecnologias">Git y GitHub</li>
+            <li class="tecnologias">MySQL</li>
+            <li class="tecnologias">Eclipse</li>
+            <li class="tecnologias">Wordpress</li>
+            <li class="tecnologias">Elementor</li>
+            <li class="tecnologias">Node.js</li>
+            <li class="tecnologias">Docker</li>
+            <li class="aptitud">Inglés C1</li>
+            <li class="aptitud">Francés B2</li>
+          </ul>
+          <a
+            class="cv"
+            href="./public/AliciaValera_CVfe.pdf"
+            target="_blank"
+            title="ver CV"
+            >VER CV COMPLETO <img class="icon" src="./public/icons/link.svg"
+          /></a>
+        </div>
+      </div>
+      <div id="proyectos">
+        <p class="title">Proyectos recientes</p>
+        <div class="pestanas">
+          <div class="tab">
+            <button
+              class="tablinks"
+              onclick="openCity(event, 'GreenVet')"
+              id="defaultOpen"
+            >
+              GreenVet
+            </button>
+            <button class="tablinks" onclick="openCity(event, 'Muvis')">
+              Muvis
+            </button>
+            <button class="tablinks" onclick="openCity(event, 'Proximos')">
+              Próximos proyectos
+            </button>
+          </div>
+
+          <div id="GreenVet" class="tabcontent">
+            Durante tres meses trabajé en la universidad MCAST de Malta en uno
+            de sus proyectos Erasmus, en el que creamos un nuevo diseño de la
+            web utilizando Figma. Posteriormente lo implementamos utilizando
+            Worpress y Elementor e hicimos el seguimiento SEO de la página
+            usando Google Analytics y otros plugins de Wordpress. Con todo esto
+            conseguimos mejorar la experiencia de usuario y la accesibilidad de
+            la página, así como su posicionamiento en Google.
+            <a
+              href="https://www.greenvet4sdg.eu/"
+              target="_blank"
+              class="correo"
+              >Ver página del proyecto en la actualidad</a
+            >
+            <img
+              class="img-proyectos"
+              src="./public/greenvet.png"
+              alt="greenvet preview"
+            />
+          </div>
+
+          <div id="Muvis" class="tabcontent">
+            Para mi proyecto final de grado desarrollé junto con mis compañeros
+            una red social para amantes del cine y las series utilizando React
+            en el frontend y Laravel en el backend. Utilizamos la API
+            <a href="https://www.themoviedb.org/">TMDB</a> para obterner toda la
+            información sobre las películas y creamos un sistema de usuarios en
+            el que podían interactuar entre ellos, añadir películas y series a
+            su lista de favoritos y valorar el contenido. La desplegamos en AWS
+            pero ahora mismo la página no está desplegada en ningún servidor,
+            aunque podéis ver el
+            <a
+              href="https://github.com/avrojo/MediaClub"
+              target="_blank"
+              class="correo"
+              >código en GitHub.</a
+            >
+            <img
+              class="img-proyectos"
+              src="./public/muvis.png"
+              alt="muvis preview"
+            />
+          </div>
+
+          <div id="Proximos" class="tabcontent">
+            Actualmente estoy trabajando en proyectos personales, entre ellos un
+            portfolio artístico utilizando Astro y en mejorar mi proyecto ya
+            existente de Muvis. Los añadiré próximamente
+            <img
+              class="img-proyectos"
+              src="./public/portfolio.png"
+              alt="portfolio preview"
+            />
+          </div>
+        </div>
+      </div>
+      <div id="contacto">
+        <div class="title">Contacto</div>
         <div>
-          Me dedico especialmente al desarrollo frontend y mis principales
-          objetivos al programar son crear un código limpio y eficiente y que
-          la experiencia del usuario sea placentera. Me gradué en 2025 en el
-          grado de desarrollo de aplicaciones web en el IES Villaverde y ahora
-          estoy trabajando en proyectos personales.
+          Además de poder contactarme por Linkedin podéis rellenar el siguiente
+          formulario de contacto o enviar un email a
+          <span class="correo">valerarojoalicia@gmail.com </span>
+          e intentaré responder lo antes posible
         </div>
+        <form method="POST" id="form">
+          <!-- public key -->
+          <input
+            type="hidden"
+            name="access_key"
+            value="c2f95734-b2b4-4c07-b74d-6bdb4a97c489"
+          />
+          <div class="form-input">
+            <label for="name">Nombre</label
+            ><input
+              type="text"
+              name="name"
+              id="name"
+              class="leches"
+              required
+              autocomplete="name"
+            />
+          </div>
+          <div class="form-input">
+            <label for="email">Email</label
+            ><input
+              type="email"
+              name="email"
+              id="email"
+              class="leches"
+              required
+              autocomplete="email"
+            />
+          </div>
+          <div class="form-input">
+            <label for="message">Mensaje</label
+            ><textarea
+              name="message"
+              id="message"
+              class="leches"
+              required
+            ></textarea>
+          </div>
+          <input
+            type="checkbox"
+            name="botcheck"
+            class="hidden"
+            style="display: none"
+          />
+          <button type="submit">ENVIAR</button>
+          <div id="result"></div>
+        </form>
       </div>
-      <div class="lista">
-        <div class="accent">
-          Lenguajes, tecnologías y aptitudes
-        </div>
-        <ul class="cosas">
-          <li class="lenguaje">HTML5</li>
-          <li class="lenguaje">CSS3</li>
-          <li class="lenguaje">JavaScript (ES6+)</li>
-          <li class="lenguaje">PHP</li>
-          <li class="lenguaje">Java (JDK18)</li>
-          <li class="lenguaje">TypeScript</li>
-          <li class="tecnologias">React</li>
-          <li class="tecnologias">Laravel</li>
-          <li class="tecnologias">Astro</li>
-          <li class="tecnologias">Figma</li>
-          <li class="tecnologias">Git y GitHub</li>
-          <li class="tecnologias">MySQL</li>
-          <li class="tecnologias">Eclipse</li>
-          <li class="tecnologias">Wordpress</li>
-          <li class="tecnologias">Elementor</li>
-          <li class="tecnologias">Node.js</li>
-          <li class="tecnologias">Docker</li>
-          <li class="aptitud">Inglés C1</li>
-          <li class="aptitud">Francés B2</li>
-        </ul>
-        <a class="cv" href="./public/AliciaValera_CVfe.pdf" target="_blank" title="ver CV">VER CV COMPLETO <img
-            class="icon" src="./public/icons/link.svg" /></a>
+    </main>
+    <div class="footer">
+      <div class="footer-text">
+        Página diseñada utilizando Figma, para luego ser desarrollada en HTML,
+        CSS y JavaScript vanilla por Alicia Valera
       </div>
+      <a href="" class="footer-text">Volver arriba</a>
+      <a
+        href="https://github.com/avrojo/avrojo.github.io"
+        target="_blank"
+        class="footer-text"
+        >Ver código en GitHub</a
+      >
     </div>
-    <div id="proyectos">
-      <p class="title">Proyectos recientes</p>
-      <div class="pestanas">
-        <div class="tab">
-          <button class="tablinks" onclick="openCity(event, 'GreenVet')" id="defaultOpen">GreenVet</button>
-          <button class="tablinks" onclick="openCity(event, 'Muvis')">Muvis</button>
-          <button class="tablinks" onclick="openCity(event, 'Proximos')">Próximos proyectos</button>
-        </div>
 
-        <div id="GreenVet" class="tabcontent">
-          Durante tres meses trabajé en la universidad MCAST de Malta en uno de sus proyectos Erasmus, en el que
-          creamos un nuevo diseño de la web utilizando Figma. Posteriormente lo implementamos utilizando
-          Worpress y Elementor e hicimos el seguimiento SEO de la página usando Google Analytics y otros plugins de
-          Wordpress.
-          Con todo esto conseguimos mejorar la experiencia de usuario y la accesibilidad de la página, así como su
-          posicionamiento en Google.
-          <a href="https://www.greenvet4sdg.eu/" target="_blank" class="correo">Ver página del proyecto en la
-            actualidad</a>
-          <img class="img-proyectos" src="./public/greenvet.png" alt="greenvet preview" />
-        </div>
-
-        <div id="Muvis" class="tabcontent">
-          Para mi proyecto final de grado desarrollé junto con mis compañeros una red social para amantes del cine y las
-          series
-          utilizando React en el frontend y Laravel en el backend. Utilizamos la API <a
-            href="https://www.themoviedb.org/">TMDB</a> para obterner toda la información sobre las películas
-          y creamos un sistema de usuarios en el que podían interactuar entre ellos,
-          añadir películas y series a su lista de favoritos y valorar el contenido. La desplegamos en AWS pero ahora
-          mismo la página no está desplegada en ningún servidor, aunque
-          podéis ver el <a href="https://github.com/avrojo/MediaClub" target="_blank" class="correo">código en
-          GitHub.</a>
-          <img class="img-proyectos" src="./public/muvis.png" alt="muvis preview" />
-        </div>
-
-        <div id="Proximos" class="tabcontent">
-          Actualmente estoy trabajando en proyectos personales, entre ellos un portfolio artístico utilizando Astro y
-          en mejorar mi proyecto ya existente de Muvis. Los añadiré próximamente
-          <img class="img-proyectos" src="./public/portfolio.png" alt="portfolio preview" />
-        </div>
-      </div>
-    </div>
-    <div id="contacto">
-      <div class="title">Contacto</div>
-      <div>
-        Además de poder contactarme por Linkedin podéis rellenar el siguiente formulario
-        de contacto o enviar un email a <span class="correo">valerarojoalicia@gmail.com </span>
-        e intentaré responder lo antes posible
-      </div>
-      <form method="POST" id="form">
-        <!-- public key -->
-        <input type="hidden" name="access_key" value="c2f95734-b2b4-4c07-b74d-6bdb4a97c489">
-        <div class="form-input"><label for="name">Nombre</label><input type="text" name="name" id="name" class="leches"
-            required autocomplete="name"></div>
-        <div class="form-input"><label for="email">Email</label><input type="email" name="email" id="email"
-            class="leches" required autocomplete="email"></div>
-        <div class="form-input"><label for="message">Mensaje</label><textarea name="message" id="message" class="leches"
-            required></textarea></div>
-        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-        <button type="submit">ENVIAR</button>
-        <div id="result"></div>
-
-      </form>
-    </div>
-  </main>
-  <div class="footer">
-    <div class="footer-text">
-      Página diseñada utilizando Figma, para luego ser desarrollada en
-      HTML, CSS y JavaScript vanilla por Alicia Valera
-    </div>
-    <a href="" class="footer-text">Volver arriba</a>
-    <a href="https://github.com/avrojo/avrojo.github.io" target="_blank" class="footer-text">Ver código en GitHub</a>
-  </div>
-
-  <script src="./utils/form.js"></script>
-  <script src="./utils/gradient.js"></script>
-  <script src="./utils/proyectos.js"></script>
-  <script src="./utils/scroll.js"></script>
-</body>
-
+    <script src="./utils/form.js"></script>
+    <script src="./utils/gradient.js"></script>
+    <script src="./utils/proyectos.js"></script>
+    <script src="./utils/scroll.js"></script>
+  </body>
 </html>
